--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@ Sure — here’s a clean, modern **starter `index.html`** you can use for almos
     <p>© 2026 My Website</p>
   </footer>
 
-  <!-- Optional JavaScript -->
+  
   <script>
     function sayHi() {
       alert("Hello from index.html!");
     }
   </script>
+<p> chan </p>
 
 </body>
 </html>
